--- a/taskmaster/app/src/main/res/layout/activity_add_task.xml
+++ b/taskmaster/app/src/main/res/layout/activity_add_task.xml
@@ -166,14 +166,14 @@
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="52dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_arrow_left"
+        android:fontFamily="@font/roboto_regular"
         android:text="@string/back"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/totalTask"
-        app:layout_constraintVertical_bias="0.0"
-        android:background="@drawable/btn_custom"
-        android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/white" />
+        app:layout_constraintVertical_bias="0.428" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
