--- a/taskmaster/app/src/main/res/layout/activity_all_task.xml
+++ b/taskmaster/app/src/main/res/layout/activity_all_task.xml
@@ -79,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.959"
-        android:background="@drawable/btn_custom"
+        android:background="@drawable/ic_arrow_left"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@android:color/white" />
 </androidx.constraintlayout.widget.ConstraintLayout>
