--- a/taskmaster/app/src/main/res/layout/activity_settings.xml
+++ b/taskmaster/app/src/main/res/layout/activity_settings.xml
@@ -74,4 +74,19 @@
         android:textColor="@android:color/white"
         />
 
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:background="@drawable/ic_arrow_left"
+        android:fontFamily="@font/roboto_regular"
+        android:text="@string/back"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
